@@ -21,14 +21,62 @@ public class InMemoryHistoryManagerTest {
     }
 
     @Test
-    void shouldSavePreviousVersionOfTask() {
+    void shouldRemoveDuplicatesAndKeepLastVersion() {
         historyManager.add(task);
+
         Task updatedTask = new Task("TaskUpdated", "DescUpdated", 1, Status.DONE);
+
         historyManager.add(updatedTask);
 
-        List<Integer> history = historyManager.getHistory();
-        assertEquals(2, history.size(), "История должна хранить обе версии задачи");
-        assertEquals(1, history.get(0), "ID первой версии должен сохраниться");
-        assertEquals(1, history.get(1), "ID второй версии должен сохраниться");
+        List<Task> history = historyManager.getHistory();
+
+        assertEquals(1, history.size(), "Дубликаты должны удаляться");
+        assertEquals("TaskUpdated", history.getFirst().getName(), "Должна сохраниться последняя версия");
+        assertEquals(Status.DONE, history.getFirst().getStatus(), "Должна сохраниться последняя версия");
+    }
+
+    @Test
+    void shouldMaintainInsertionOrder() {
+        Task task1 = new Task("Task1", "Desc1", 1, Status.NEW);
+        Task task2 = new Task("Task2", "Desc2", 2, Status.IN_PROGRESS);
+        Task task3 = new Task("Task3", "Desc3", 3, Status.DONE);
+
+        historyManager.add(task1);
+        historyManager.add(task2);
+        historyManager.add(task3);
+
+        List<Task> history = historyManager.getHistory();
+
+        assertEquals(3, history.size(), "Все задачи должны быть в истории");
+        assertEquals(1, history.get(0).getId(), "Первая задача должна быть первой в истории");
+        assertEquals(2, history.get(1).getId(), "Вторая задача должна быть второй в истории");
+        assertEquals(3, history.get(2).getId(), "Третья задача должна быть третьей в истории");
+    }
+
+    @Test
+    void shouldRemoveTaskFromHistory() {
+        historyManager.add(task);
+
+        assertEquals(1, historyManager.getHistory().size());
+
+        historyManager.remove(1);
+
+        assertTrue(historyManager.getHistory().isEmpty(), "История должна быть пустой после удаления");
+    }
+
+    @Test
+    void shouldHandleEmptyHistory() {
+        List<Task> history = historyManager.getHistory();
+
+        assertTrue(history.isEmpty(), "Новая история должна быть пустой");
+    }
+
+    @Test
+    void shouldNotAddNullTask() {
+        historyManager.add(null);
+
+        List<Task> history = historyManager.getHistory();
+
+        assertTrue(history.isEmpty(), "История должна остаться пустой после добавления null");
     }
 }
